# TestingAction

./: .flake8  README.md  config.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  requirements.yml
ATRI/: config.py  exceptions.py  log.py  service.py
ATRI/plugins/: admin.py  call-owner.py  code-runner.py  essential.py  funny.py  help.py  hitokoto.py  nsfw.py  status.py
ATRI/plugins/anime-search/: __init__.py  data_source.py
ATRI/plugins/curse/: __init__.py
ATRI/plugins/drifting-bottle/: __init__.py
ATRI/plugins/key-repo/: __init__.py  data_source.py
ATRI/plugins/rich/: __init__.py
ATRI/plugins/utils/: __init__.py
ATRI/utils/: img.py  limit.py
