[tool.poetry]
name = "ATRI"
version = "YHN-001-A01"
description = "适用于QQ群中的二刺螈BOT"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
